# fol-prover

./: README.org  cabal.project  fol-prover.cabal
src/: Convenience.hs  Formulae.hs  Tableaux.hs
